# private-data-lookup

./: .gitignore  LICENSE  README.md
.github/workflows/: backend.yml  commits.yml
backend/: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
backend/database/: a.out  breachedPasswords.db  database.cpp  generatePasswords.py  passwords.py
backend/src/: CMakeLists.txt  cryptography.cpp  cryptography.hpp  database.cpp  database.hpp  main.cpp  password.cpp  password.hpp  passwords.cpp  passwords.hpp  server.cpp  server.hpp
backend/test/: CMakeLists.txt  cryptography.cpp  database.cpp  password.cpp  server.cpp  testPasswordGenerator.cpp
backend/tests/: CMakeLists.txt  cryptography.cpp  server.cpp  test.cpp  testPasswordGenerator.cpp
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  handlers.ts  layout.tsx  page.tsx  psi.js  psi.ts
frontend/app/success/: page.tsx
frontend/tests/: psi.test.ts
tests/: testPasswordGenerator.cpp
